--- a/Partyguard_iOS/Base.lproj/Main.storyboard
+++ b/Partyguard_iOS/Base.lproj/Main.storyboard
@@ -167,6 +167,7 @@
                         <barButtonItem key="leftBarButtonItem" image="Menu Filled-50.png" id="Khw-8s-cJg">
                             <connections>
                                 <action selector="onClickMenuBarButton:" destination="JSq-Sx-efB" id="nLR-aG-173"/>
+                                <segue destination="ndI-vo-vqY" kind="show" id="hHP-S6-rLc"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -564,7 +565,6 @@
         <!--Info View Controller-->
         <scene sceneID="ZCt-IV-iGT">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="4lf-3x-kNI" sceneMemberID="firstResponder"/>
                 <viewController id="FF7-x8-a98" customClass="InfoViewController" customModule="Partyguard_iOS" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="iql-jj-mgC"/>
@@ -585,7 +585,7 @@
                                     <navigationItem title="PartyGuard" id="hME-xb-P66">
                                         <barButtonItem key="rightBarButtonItem" style="plain" id="Dba-il-U6r">
                                             <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="4Zu-8E-N3E">
-                                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                                                <rect key="frame" x="534" y="7" width="46" height="30"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <state key="normal" title="Next"/>
                                                 <connections>
@@ -666,6 +666,7 @@
                         </variation>
                     </view>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4lf-3x-kNI" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="801" y="1309"/>
         </scene>
@@ -678,42 +679,74 @@
                         <viewControllerLayoutGuide type="bottom" id="03q-mu-weM"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="jtY-3A-lKF">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <connections>
-                        <segue destination="WgL-7N-QY8" kind="custom" identifier="sw_rear" customClass="SWRevealViewControllerSegueSetController" id="z9A-bV-DpF"/>
                         <segue destination="cjN-74-CgC" kind="custom" identifier="sw_front" customClass="SWRevealViewControllerSegueSetController" id="bUr-gV-Jv9"/>
+                        <segue destination="ndI-vo-vqY" kind="custom" identifier="sw_rear" customClass="SWRevealViewControllerSegueSetController" id="Hbh-P6-PgG"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6z5-ng-PXv" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1534.5" y="1309"/>
+            <point key="canvasLocation" x="1765.5" y="1309"/>
         </scene>
-        <!--Table View Controller-->
-        <scene sceneID="U4L-Pd-Pzo">
+        <!--View Controller-->
+        <scene sceneID="L33-6q-hLs">
             <objects>
-                <tableViewController id="WgL-7N-QY8" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="skB-nv-hmi">
+                <viewController id="ndI-vo-vqY" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="8vW-eG-9D8"/>
+                        <viewControllerLayoutGuide type="bottom" id="B7e-eT-Nb4"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Mcm-Ac-PKy">
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="3jO-23-eam">
+                                <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
+                                <variation key="widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="49" y="85" width="150" height="110"/>
+                                </variation>
+                            </imageView>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="aIT-dN-aQr">
+                                <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <variation key="widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="5" y="264" width="284" height="336"/>
+                                </variation>
+                            </tableView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Uco-Yu-i6f">
+                                <rect key="frame" x="-42" y="-21" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                                <variation key="widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="103" y="212" width="42" height="21"/>
+                                </variation>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="J8r-P0-W1F">
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="J8r-P0-W1F" id="FmT-ri-EHy">
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </tableViewCellContentView>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="WgL-7N-QY8" id="9r8-Rn-Ob9"/>
-                            <outlet property="delegate" destination="WgL-7N-QY8" id="P8H-1K-aVB"/>
-                        </connections>
-                    </tableView>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="4Er-fg-GwD" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                        <variation key="default">
+                            <mask key="subviews">
+                                <exclude reference="3jO-23-eam"/>
+                                <exclude reference="aIT-dN-aQr"/>
+                                <exclude reference="Uco-Yu-i6f"/>
+                            </mask>
+                        </variation>
+                        <variation key="widthClass=compact">
+                            <mask key="subviews">
+                                <include reference="3jO-23-eam"/>
+                                <include reference="aIT-dN-aQr"/>
+                                <include reference="Uco-Yu-i6f"/>
+                            </mask>
+                        </variation>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4fV-PU-hBh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2056.5" y="2047"/>
+            <point key="canvasLocation" x="2284.5" y="2004"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Okj-KE-nQD">
@@ -737,5 +770,8 @@
     <resources>
         <image name="Menu Filled-50.png" width="25" height="25"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="Hbh-P6-PgG"/>
+    </inferredMetricsTieBreakers>
     <color key="tintColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
 </document>
